<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    style="@style/SCREEN">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <Button
                    android:id="@+id/addContactButtonMain"
                    style="@style/BUTTON"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NouContacte"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/deleteAllButtonMain"
                    style="@style/BUTTON"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DeleteAll"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <Button
                    android:id="@+id/showButton"
                    style="@style/BUTTON"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mostrarPreferencies"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/prefButton"
                    style="@style/BUTTON"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/editarPreferencies"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/LlistaContactes"
            android:textSize="34sp"
            android:layout_marginTop="1dp"
            android:layout_marginStart="10dp">

        </TextView>

        <ListView
            android:id="@+id/listViewContactes"
            android:layout_width="385dp"
            android:layout_height="602dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>